fixed scrolling errors by fixing bootstrap wrapper
bootstrap footer needs div id=wrap to push it to the bottom of the page
and have scrolling working. added back in; now scrolling works when the
content overflows the viewport size

--- a/rndapp/static/common.css
+++ b/rndapp/static/common.css
@@ -84,6 +84,7 @@ b {
 }
 
 /* for the main content */
+/* this is the wrapper.. inside the bootstrap wrapper ._. >< */
 #rcontent {
   width: 100%;
   height: 100%;
@@ -122,9 +123,12 @@ b {
   height: auto !important;
   height: 100%;
   /* Negative indent footer by its height */
-  margin: 0 auto -60px;
+  margin: 0 auto -40px;
   /* Pad bottom by footer height */
-  padding: 0 0 60px;
+  padding: 0 0 40px;
+
+  /* agora */
+  background: #4d4d4d;
 }
 
 /* Set the fixed height of the footer here */
